--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="container header-inner">
             <div class="logo" id="logo">
-                <img src="CEO LOGO.jpeg" alt="Sine Autos Logo">
+                <img src="./CEO LOGO.jpeg" alt="Sine Autos Logo">
                 <span class="logo-text">SINE AUTOS</span>
             </div>
             <nav class="desktop-nav">
@@ -122,15 +122,15 @@
         </div>
     </section>
 
-    <!-- Inventory Preview Section -->
+    <!-- Inventory Preview Section (CENTRALIZED) -->
     <section id="inventory-preview">
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">Premium Inventory</h2>
                 <p class="section-subtitle">Curated selection of luxury vehicles available for immediate purchase or import</p>
             </div>
-            <div class="inventory-grid">
-                <div class="card inventory-card">
+            <div class="inventory-grid" style="justify-items: center;">
+                <div class="card inventory-card" style="max-width: 320px;">
                     <img src="https://images.unsplash.com/photo-1555212697-194d092e3b8f?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Mercedes-Benz">
                     <div class="inventory-content">
                         <h3>2023 Mercedes-Benz GLE 63 S</h3>
@@ -147,7 +147,7 @@
                     </div>
                 </div>
                 
-                <div class="card inventory-card">
+                <div class="card inventory-card" style="max-width: 320px;">
                     <img src="https://images.unsplash.com/photo-1549924231-f129b911e442?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Porsche 911">
                     <div class="inventory-content">
                         <h3>2022 Porsche 911 Turbo S</h3>
@@ -166,7 +166,7 @@
             </div>
             <div style="text-align: center; margin-top: 50px;">
                 <a href="inventory.html" class="btn btn-outline">
-                    <i class="fas fa-car"></i> View Full Inventory
+                    <i class="fas fa-car"></i> View Full Inventory (20+ Cars)
                 </a>
             </div>
         </div>
@@ -176,7 +176,7 @@
     <footer id="contact">
         <div class="container">
             <div class="footer-content">
-                <img src="CEO LOGO.jpeg" alt="Sine Autos Logo" class="footer-logo">
+                <img src="./CEO LOGO.jpeg" alt="Sine Autos Logo" class="footer-logo">
                 <h2 class="logo-text" style="font-size: 32px; margin-bottom: 20px;">SINE AUTOS</h2>
                 <p>Vintage to Modern — Your Automotive Hub</p>
                 <p style="margin-top: 10px; color: var(--gold); font-weight: 500;">
