--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="container header-inner">
             <div class="logo" id="logo">
-                <img src="./CEO LOGO.jpeg" alt="Sine Autos Logo">
+                <img src="logo.jpeg" alt="Sine Autos Logo">
                 <span class="logo-text">SINE AUTOS</span>
             </div>
             <nav class="desktop-nav">
@@ -122,7 +122,7 @@
         </div>
     </section>
 
-    <!-- Inventory Preview Section (CENTRALIZED) -->
+    <!-- Inventory Preview Section (CENTRALIZED - 3 CARS) -->
     <section id="inventory-preview">
         <div class="container">
             <div class="section-header">
@@ -130,6 +130,7 @@
                 <p class="section-subtitle">Curated selection of luxury vehicles available for immediate purchase or import</p>
             </div>
             <div class="inventory-grid" style="justify-items: center;">
+                <!-- Car 1 -->
                 <div class="card inventory-card" style="max-width: 320px;">
                     <img src="https://images.unsplash.com/photo-1555212697-194d092e3b8f?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Mercedes-Benz">
                     <div class="inventory-content">
@@ -147,6 +148,7 @@
                     </div>
                 </div>
                 
+                <!-- Car 2 -->
                 <div class="card inventory-card" style="max-width: 320px;">
                     <img src="https://images.unsplash.com/photo-1549924231-f129b911e442?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Porsche 911">
                     <div class="inventory-content">
@@ -158,6 +160,24 @@
                                 <i class="fab fa-whatsapp"></i> Inquiry
                             </button>
                             <button class="btn btn-outline btn-sm" onclick="openModal('inspection','Inspection: 2022 Porsche 911 Turbo S')">
+                                <i class="fas fa-calendar-check"></i> Inspect
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                
+                <!-- Car 3 -->
+                <div class="card inventory-card" style="max-width: 320px;">
+                    <img src="https://images.unsplash.com/photo-1533473359331-0135ef1b58bf?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Range Rover">
+                    <div class="inventory-content">
+                        <h3>2023 Range Rover Autobiography</h3>
+                        <div class="price">$185,000</div>
+                        <p>Automatic • Diesel • 3,200 miles • Full SVO Package</p>
+                        <div class="actions">
+                            <button class="btn btn-gold btn-sm" onclick="openServiceModal('vehicle-sales', '2023 Range Rover Autobiography')">
+                                <i class="fab fa-whatsapp"></i> Inquiry
+                            </button>
+                            <button class="btn btn-outline btn-sm" onclick="openModal('inspection','Inspection: 2023 Range Rover Autobiography')">
                                 <i class="fas fa-calendar-check"></i> Inspect
                             </button>
                         </div>
@@ -176,7 +196,7 @@
     <footer id="contact">
         <div class="container">
             <div class="footer-content">
-                <img src="./CEO LOGO.jpeg" alt="Sine Autos Logo" class="footer-logo">
+                <img src="logo.jpeg" alt="Sine Autos Logo" class="footer-logo">
                 <h2 class="logo-text" style="font-size: 32px; margin-bottom: 20px;">SINE AUTOS</h2>
                 <p>Vintage to Modern — Your Automotive Hub</p>
                 <p style="margin-top: 10px; color: var(--gold); font-weight: 500;">
