--- a/ceo.html
+++ b/ceo.html
@@ -16,7 +16,7 @@
     <header>
         <div class="container header-inner">
             <div class="logo" id="logo">
-                <img src="CEO LOGO.jpeg" alt="Sine Autos Logo">
+                <img src="logo.jpeg" alt="Sine Autos Logo">
                 <span class="logo-text">SINE AUTOS</span>
             </div>
             <nav class="desktop-nav">
@@ -142,7 +142,7 @@
     <footer id="contact">
         <div class="container">
             <div class="footer-content">
-                <img src="CEO LOGO.jpeg" alt="Sine Autos Logo" class="footer-logo">
+                <img src="logo.jpeg" alt="Sine Autos Logo" class="footer-logo">
                 <h2 class="logo-text" style="font-size: 32px; margin-bottom: 20px;">SINE AUTOS</h2>
                 <p>Vintage to Modern — Your Automotive Hub</p>
                 <p style="margin-top: 10px; color: var(--gold); font-weight: 500;">
